# sfml-base

./: .clang_complete  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  sfml-base.sublime-project
src/: Main.cpp
src/logger/: Logger.cpp  Logger.h
src/ui/: UIConsoleWindow.h  UIElement.h  UIGroup.h  UIWindow.h
